# CSO

AVR1/mio/avr_common/: avr.mk
AVR1/mio/hello/: Makefile  main.c  main.elf  main.hex
AVR1/mio/keyboard/: main.c  main.elf  main.hex
AVR1/mio/led/: main.c  main.elf  main.hex
AVR1/mio/shaft_encoder/: Makefile  main.c  main.elf  main.hex  uart.c  uart.h
AVR1/mio/timer/: main.c  main.elf  main.hex
AVR1/prof/: Makefile
AVR1/prof/03_timer/: playground.c  timer_interrupt.c
AVR1/prof/04_external_interrupt/: pin_change.c
AVR1/prof/06_shaft_encoder_exercise/: encoder.c
AVR1/prof/07_keyboard_exercise/: keyboard.c
AVR1/prof/08_fullport_encoder_exercise/: full_encoder.c
C-OOP/e1/: CMakeLists.txt  float_list.c  float_list.h  int_list.c  int_list.h  linked_list.c  linked_list.h  list_list.h  main.c
C-OOP/e2/: e2  main  main.c
C-OOP/e3/: CMakeLists.txt  float_list.c  float_list.h  int_list.c  int_list.h  linked_list.c  linked_list.h  list_list.c  list_list.h  main.c
CMAKE/exercise/exercise/mini_core/: CMakeLists.txt
CMAKE/exercise/exercise/mini_core/executables/: CMakeLists.txt  Makefile
CMAKE/exercise/exercise/mini_core/src/: CMakeLists.txt  Makefile  cmake_install.cmake
